Mon Mar 27 17:00:31 UTC 2006  James H. Hill  <hillj@isis.vanderbilt.edu>

        * modules/ProjectCreator.pm:

          Added support of ASP.NET project files (.aspx files) to both
          Visual Basic and C# project.

        * templates/vc7vb.mpd:

          - Changed default extension for resx files from .cs to .vb
          - Added template code to correctly handle .aspx files

        * templates/vc7csharp.mpd:
        * templates/vc8csharp.mpd:

          - Added template code to correctly handle .aspx files

Thu Mar 23 14:56:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/bds.mpd:
          If linkflags contains -aa then generate option.aa.enabled as 1.

Thu Mar 23 14:51:12 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * templates/vc7.mpd:
        * templates/vc8.mpd:

          Added the missing UNICODE and _UNICODE macros to the resource file
          compile line if the 'unicode' template variable is set.

Thu Mar 23 14:30:00 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Driver.pm:

          Convert all back slashes to slashes before calling mpc_basename().

        * templates/makedll.mpt:

          Added -ldl to the vxworks_rtp platform section.

        * templates/vc7.mpd:

          Moved the ProgramDataBaseFileName down after the precompiled
          header section to more closely match the way visual studio
          produces project files.

Thu Mar 23 12:11:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/bmake.mpd:
          If linkflags are available, generate them into the project
          file

Thu Mar 16 17:58:37 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/VC8ProjectCreator.pm:

          Fixed a bug where the SUPER version of the translate_value()
          wasn't called at the end of the local translate_value() method.
          This was causing problems when the -name_modifier and